Add full implementation of notifications on backend
