# server/index.js
@@ -320,6 +320,7 @@ app.put('/api/thesisRequests/:thesisRequestId', isLoggedIn, validate({ body: the
 /* NOTIFICATIONS API */
 app.get('/api/notifications', isLoggedIn, notificationController.getNotifications);
 app.put('/api/notifications/:notificationsId', isLoggedIn, notificationController.updateNotification);
+app.delete('/api/notifications', isLoggedIn, notificationController.deleteAllNotifications);
 
 
 /* VIRTUAL CLOCK */
